tmp/prod-account-button-check/unzipped/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualRevenueRange__c</fullName>
        <label>年間収益</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>未設定</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractCount__c</fullName>
        <label>契約者数</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ソースイベント</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>取引先</relationshipLabel>
        <relationshipName>event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freee_Partner_Id__c</fullName>
        <externalId>true</externalId>
        <label>Freee取引先ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IndustryCategory__c</fullName>
        <label>業界</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>未設定</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IndustryType__c</fullName>
        <label>業種</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>インフラ・エネルギー関連企業</fullName>
                </value>
                <value>
                    <fullName>ゼネコン・サブコン</fullName>
                </value>
                <value>
                    <fullName>ハウスメーカー</fullName>
                </value>
                <value>
                    <fullName>ビルメンテナンス</fullName>
                </value>
                <value>
                    <fullName>マネジメント（AM、PM、FM、BM）</fullName>
                </value>
                <value>
                    <fullName>マンションデベロッパー</fullName>
                </value>
                <value>
                    <fullName>マンション・ビル・不動産オーナー</fullName>
                </value>
                <value>
                    <fullName>マンション管理会社</fullName>
                </value>
                <value>
                    <fullName>マンション管理組合</fullName>
                </value>
                <value>
                    <fullName>リフォーム会社</fullName>
                </value>
                <value>
                    <fullName>不動産デベロッパー</fullName>
                </value>
                <value>
                    <fullName>不動産売買・仲介会社</fullName>
                </value>
                <value>
                    <fullName>商社・問屋</fullName>
                </value>
                <value>
                    <fullName>官公庁・団体</fullName>
                </value>
                <value>
                    <fullName>工事会社</fullName>
                </value>
                <value>
                    <fullName>工務店</fullName>
                </value>
                <value>
                    <fullName>建築設計事務所</fullName>
                </value>
                <value>
                    <fullName>情報通信・SI</fullName>
                </value>
                <value>
                    <fullName>物流・運送・小売・流通</fullName>
                </value>
                <value>
                    <fullName>自治体</fullName>
                </value>
                <value>
                    <fullName>製造</fullName>
                </value>
                <value>
                    <fullName>設備・建材メーカー</fullName>
                </value>
                <value>
                    <fullName>賃貸住宅管理・仲介会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>ラベル</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>お客様</fullName>
                </value>
                <value>
                    <fullName>アツアツのリード</fullName>
                </value>
                <value>
                    <fullName>温かいリード</fullName>
                </value>
                <value>
                    <fullName>冷えたリード</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedInProfileUrl__c</fullName>
        <label>LinkedInプロファイル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesMemo__c</fullName>
        <label>営業メモ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Freee_Partner_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PreFreeeSync</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Freee_Partner_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Freee_Partner_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>Freee未同期取引先</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>